# DynaWhite

./: .gitignore  Cargo.toml  README.md  build.sh  default.nix  fix_whitelist.sh  pom.xml
.github/workflows/: rust.yml
http-server/: Cargo.toml
http-server/src/: lib.rs
http-server/templates/: register.html  verify.html
re/nilsand/opgsmc/whitelist/: App.java
src/: lib.rs
src/main/java/re/nilsand/opgsmc/whitelist/: App.java
src/main/resources/: plugin.yml
templates/: base.html  register.html
