[package]
name = "http-server"
version = "0.1.0"
authors = ["Nils ANDRÉ-CHANG <nils@nilsand.re>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.14"
rocket = "0.4"
rocket_contrib = { version = "0.4", default-features = false, features = ["uuid"] }
askama = { version = "0.9", default-features = false, features = [ "with-rocket" ] }
serde = { version = "1", features = ["derive"] }
reqwest = "0.9"
lettre = "0.9"
lettre_email = "0.9"
native-tls = "0.2"
lazy_static = "1"

[lib]
crate_type = ["cdylib"]
